@@ -33,7 +33,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)dpost.c	1.84 (gritter) 9/22/05
+ * Sccsid @(#)dpost.c	1.85 (gritter) 9/25/05
  */
 
 /*
@@ -415,6 +415,7 @@ int		size = 1;		/* current size - internal value */
 #define	FRACTSIZE	-23		/* if size == FRACTSIZE then ... */
 float		fractsize = 0;		/* fractional point size */
 int		font = 0;		/* font position we're using now */
+int		subfont = 0;		/* extra encoding vector */
 int		hpos = 0;		/* where troff wants to be - horizontally */
 int		vpos = 0;		/* same but vertically */
 float		lastw = 0;		/* width of the last input character */
@@ -442,6 +443,7 @@ float		widthfac = 1.0;		/* for emulation = res/dev.res */
 int		lastsize = -1;		/* last internal size we used */
 float		lastfractsize = -1;	/* last fractional size */
 int		lastfont = -1;		/* last font we told printer about */
+int		lastsubfont = -1;	/* last extra encoding vector */
 float		lastx = -1;		/* printer's current position */
 int		lasty = -1;
 int		lastend;		/* where last character on this line was */
@@ -453,15 +455,9 @@ int		lastend;		/* where last character on this line was */
  * in the binary font files.
  *
  * When font metrics are directly read from AFM files, all characters that
- * are not ASCII are put into the remaining positions in a PostScript encoding
- * vector. Their position in this vector in recorded in afmmap, and characters
- * from troff are translated if necessary.
- *
- * Currently only one encoding vector per physical font is built, and thus at
- * most 255 characters from it can be accessed. If access to more characters
- * becomes required in the future, multiple virtual fonts, each with its own
- * encoding vector, could be created for each physical font. dpost then had
- * to change between them if necessary without an explicit request by troff.
+ * are not ASCII are put into the remaining positions in PostScript encoding
+ * vectors. Their position in these vectors in recorded in afmmap, and
+ * characters from troff are translated if necessary.
  *
  */
 
@@ -469,7 +465,7 @@ int		lastend;		/* where last character on this line was */
 struct  {
 
 	struct afmtab	*afm;		/* AFM data, if any */
-	char	*afmmap;		/* map of non-ASCII characters */
+	int	*afmmap;		/* map of non-ASCII characters */
 	char	*name;			/* name of the font loaded here */
 	int	number;			/* its internal number */
 
@@ -1278,8 +1274,10 @@ conv(
 		    endtext();
 		    getdraw();
 		    if ( size != lastsize || size == FRACTSIZE &&
-				    fractsize != lastfractsize)
+				    fractsize != lastfractsize) {
+			subfont = 0;
 			t_sf();
+		    }
 		    switch ((c=getc(fp))) {
 			case 'p':	/* draw a path */
 			    while (fscanf(fp, "%d %d", &n, &m) == 2)
@@ -1540,6 +1538,7 @@ devcntrl(
 		} else if ( strcmp(str, "Sync") == 0 )  {
 		    if (tracked)
 			    tracked = -1;
+		    subfont = 0;
 		    t_sf();
 		    xymove(hpos, vpos);
 		} else if ( strcmp(str, "PS") == 0 || strcmp(str, "PostScript") == 0 )  {
@@ -2005,7 +2004,7 @@ reset(void)
 
     lastx = -(slop + 1);
     lasty = -1;
-    lastfont = lastsize = -1;
+    lastfont = lastsubfont = lastsize = -1;
     if (tracked)
 	    tracked = -1;
 
@@ -2470,7 +2469,7 @@ t_fp (
     fontname[n].afm = a;
 
     if ( n == lastfont )		/* force a call to t_sf() */
-	lastfont = -1;
+	lastfont = lastsubfont = -1;
 
     if ( n > nfonts )  {		/* got more positions */
 	nfonts = n;
@@ -2599,6 +2598,41 @@ setfont (
 
 /*****************************************************************************/
 static void
+endvec(struct afmtab *a, int n)
+{
+	fprintf(gf, "] def\n");
+	fprintf(gf, "\
+/%s findfont\n\
+dup length dict begin\n\
+  {1 index /FID ne {def} {pop pop} ifelse} forall\n\
+  /Encoding Encoding-@%s@%d def\n\
+  currentdict\n\
+end\n",
+		a->fontname, a->Font.intname, n);
+	if (strcmp(a->fontname, "Symbol") == 0) {
+		fprintf(gf, "/Symbol-tmp-@%s@%d exch definefont pop\n",
+			a->Font.intname, n);
+		fprintf(gf, "/Symbol-tmp-@%s@%d /Symbol-@%s-@%d Sdefs cf\n",
+			a->Font.intname, n, a->Font.intname, n);
+		fprintf(gf, "/Symbol-tmp-@%s@%d undefinefont\n",
+			a->Font.intname, n);
+	} else if (strcmp(a->fontname, "Times-Roman") == 0) {
+		fprintf(gf, "/Times-Roman-tmp-@%s@%d exch definefont pop\n",
+			a->Font.intname, n);
+		fprintf(gf, "/Times-Roman-tmp-@%s@%d /Times-Roman-@%s-@%d S1defs cf\n",
+			a->Font.intname, n, a->Font.intname, n);
+		fprintf(gf, "/Times-Roman-tmp-@%s@%d undefinefont\n",
+			a->Font.intname, n);
+	} else
+		fprintf(gf, "/%s-@%s@%d exch definefont pop\n",
+			a->fontname, a->Font.intname, n);
+	fprintf(gf, "/@%s", a->Font.intname);
+	if (n > 0)
+		fprintf(gf, "@%d", n);
+	fprintf(gf, " /%s-@%s@%d def\n", a->fontname, a->Font.intname, n);
+}
+
+static void
 printencsep(int *colp)
 {
 	if (*colp >= 60) {
@@ -2610,21 +2644,21 @@ printencsep(int *colp)
 	}
 }
 
-static char *
+static int *
 printencvector(struct afmtab *a)
 {
-	int	i, j, k, col = 0, s, w;
-	char	*afmmap = NULL;
+	int	i, j, k, n, col = 0, s, w;
+	int	*afmmap = NULL;
 
-	fprintf(gf, "/Encoding-@%s [\n", a->Font.intname);
+	fprintf(gf, "/Encoding-@%s@0 [\n", a->Font.intname);
 	col = 0;
 	/*
-	 * First, write excess entries into the positiongs from 1 to 31
+	 * First, write excess entries into the positions from 1 to 31
 	 * for later squeezing of characters >= 0400.
 	 */
 	s = 128 - 32;
 	w = 128;
-	afmmap = calloc(256 + nchtab, sizeof *afmmap);
+	afmmap = calloc(256 + nchtab + a->nchars, sizeof *afmmap);
 	col += fprintf(gf, "/.notdef");
 	printencsep(&col);
 	for (j = 1; j < 32; j++) {
@@ -2658,9 +2692,9 @@ printencvector(struct afmtab *a)
 				 	a->nametab[k] == NULL))
 				s++;
 			if (s < a->nchars + 128 - 32 + nchtab &&
-				(k = a->fitab[s]) != 0 &&
-				k < a->nchars &&
-				a->nametab[k] != NULL) {
+					(k = a->fitab[s]) != 0 &&
+					k < a->nchars &&
+					a->nametab[k] != NULL) {
 				afmmap[s - 128 + 32] = i + 32;
 				col += fprintf(gf, "/%s", a->nametab[k]);
 				printencsep(&col);
@@ -2671,34 +2705,31 @@ printencvector(struct afmtab *a)
 			}
 		}
 	}
-	fprintf(gf, "] def\n");
-	fprintf(gf, "\
-/%s findfont\n\
-dup length dict begin\n\
-  {1 index /FID ne {def} {pop pop} ifelse} forall\n\
-  /Encoding Encoding-@%s def\n\
-  currentdict\n\
-end\n",
-		a->fontname, a->Font.intname);
-	if (strcmp(a->fontname, "Symbol") == 0) {
-		fprintf(gf, "/Symbol-tmp-@%s exch definefont pop\n",
-			a->Font.intname);
-		fprintf(gf, "/Symbol-tmp-@%s /Symbol-@%s Sdefs cf\n",
-			a->Font.intname, a->Font.intname);
-		fprintf(gf, "/Symbol-tmp-@%s undefinefont\n",
-			a->Font.intname);
-	} else if (strcmp(a->fontname, "Times-Roman") == 0) {
-		fprintf(gf, "/Times-Roman-tmp-@%s exch definefont pop\n",
-			a->Font.intname);
-		fprintf(gf, "/Times-Roman-tmp-@%s /Times-Roman-@%s S1defs cf\n",
-			a->Font.intname, a->Font.intname);
-		fprintf(gf, "/Times-Roman-tmp-@%s undefinefont\n",
-			a->Font.intname);
-	} else
-		fprintf(gf, "/%s-@%s exch definefont pop\n",
-			a->fontname, a->Font.intname);
-	fprintf(gf, "/@%s /%s-@%s def\n", a->Font.intname,
-			a->fontname, a->Font.intname);
+	endvec(a, 0);
+	n = 1;
+	while (s < a->nchars + 128 - 32 + nchtab) {
+		fprintf(gf, "/Encoding-@%s@%d [\n", a->Font.intname, n);
+		col = 0;
+		for (i = 0; i < 256; i++) {
+			while (s < a->nchars + 128 - 32 + nchtab &&
+					((k = a->fitab[s]) == 0 ||
+				 	a->nametab[k] == NULL))
+				s++;
+			if (s < a->nchars + 128 - 32 + nchtab &&
+					(k = a->fitab[s]) != 0 &&
+					k < a->nchars &&
+					a->nametab[k] != NULL) {
+				afmmap[s - 128 + 32] = i | n << 8;
+				col += fprintf(gf, "/%s", a->nametab[k]);
+				printencsep(&col);
+				s++;
+			} else {
+				col += fprintf(gf, "/.notdef");
+				printencsep(&col);
+			}
+		}
+		endvec(a, n++);
+	}
 	return afmmap;
 }
 /*****************************************************************************/
@@ -2741,6 +2772,7 @@ t_sf(void)
 
     if ( tf == stdout )  {
 	lastfont = font;
+	lastsubfont = subfont;
 	lastsize = size;
 	lastfractsize = fractsize;
 	if ( seenfonts[fnum] == 0 ) {
@@ -2758,7 +2790,9 @@ t_sf(void)
         fprintf(tf, "%d ", pstab[size-1]);
     else
 	fprintf(tf, "%g ", (double)fractsize);
-    if (fontname[font].afm)
+    if (fontname[font].afm && subfont)
+    	fprintf(tf, "@%s@%d f\n", fontname[font].afm->Font.intname, subfont);
+    else if (fontname[font].afm)
     	fprintf(tf, "@%s f\n", fontname[font].afm->Font.intname);
     else
     	fprintf(tf, "%s f\n", fontname[font].name);
@@ -2799,7 +2833,7 @@ t_charht (
         fontheight = f;
     else
     	fontheight = (n == pstab[size-1]) ? 0 : n;
-    lastfont = -1;
+    lastfont = lastsubfont = -1;
 
 }   /* End of t_charht */
 
@@ -2824,7 +2858,7 @@ t_slant (
  */
 
     fontslant = n;
-    lastfont = -1;
+    lastfont = lastsubfont = -1;
 
 }   /* End of t_slant */
 
@@ -3131,6 +3165,27 @@ put1 (
 /*****************************************************************************/
 
 
+static void
+oprep(void)
+{
+    if ( textcount > MAXSTACK )		/* don't put too much on the stack? */
+	endtext();
+
+    if ( font != lastfont || size != lastsize || subfont != lastsubfont ||
+		    size == FRACTSIZE && fractsize != lastfractsize) {
+	t_sf();
+    }
+
+    if ( vpos != lasty )
+	endline();
+
+    starttext();
+
+    if ( ABS(hpos - lastx) > slop )
+	endstring();
+}
+
+
 void
 oput (
     int c			/* want to print this character */
@@ -3146,22 +3201,6 @@ oput (
  * actual positioning is done here, in charlib(), or in the drawing routines.
  *
  */
-
-
-    if ( textcount > MAXSTACK )		/* don't put too much on the stack? */
-	endtext();
-
-    if ( font != lastfont || size != lastsize ||
-		    size == FRACTSIZE && fractsize != lastfractsize)
-	t_sf();
-
-    if ( vpos != lasty )
-	endline();
-
-    starttext();
-
-    if ( ABS(hpos - lastx) > slop )
-	endstring();
 
     if ( asciichar(c) && printchar(c) )
 	switch ( c )  {
@@ -3458,6 +3497,8 @@ addchar (
  */
 
 
+    subfont = 0;
+    oprep();
     switch ( encoding )  {
 	case 0:
 	case 1:
@@ -3518,11 +3559,12 @@ addoctal (
 
 
     if (c >= 128 && fontname[font].afmmap) {
-	    if (c < 128 + 256 + nchtab)
-	    	    c = fontname[font].afmmap[c - 128]&0377;
-	    else
-		    c = 32;
-    }
+	    c = fontname[font].afmmap[c - 128];
+	    subfont = c >> 8;
+	    c &= 0377;
+    } else
+	    subfont = 0;
+    oprep();
     switch ( encoding )  {
 	case 0:
 	case 1:
@@ -3596,6 +3638,8 @@ charlib (
  */
 
 
+    subfont = 0;
+    oprep();
     endtext();
 
     if ( lastc < 128 )  {		/* just a simple ASCII character */
