@@ -1,4 +1,6 @@
 Release ...
+* dpost: Can now access all characters in a large PostScript font, not only
+  the first 255.
 * dpost: If the data in a PFB file to be included does not end with a
   newline character, add one to the generated PostScript to achieve a
   consistent DSC structure (Bugreport by Sebastian Leusch).
